--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,106 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+
+@font-face {
+    font-family:'android' ;
+    src: url('../fontes/idroid.otf');
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+:root{
+    --core0:#D9D1C1;
+    --core1:#D1B67C;
+    --core2:#9E8A5D;
+    --core3:#524F49;
+    --core4:#524730;
+
+    --fonte-padrao:Arial,Verdana,Helvetica,sans-serif;
+    --fonte-destaque:'Bebas Neue', cursive;
+    --fonte-android:'android',cursive;
+}
+
 body{
-    background-color: #c5ebd6;
+    background-color: var(--core0);
+    font-family: var(--fonte-padrao);
+}
+
+header{
+    background-image: linear-gradient(to top,#9E8A5D,#D1B67C);
+    min-height: 150px;
+    text-align: center;
+}
+
+header > h1{
+    color:white ;
+    font-family: var(--fonte-destaque);
+    padding: 20px 10px 10px 10px;
+    text-shadow: 2px 2px 0px  black;
+}
+
+header > p{
+    color: #fff;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    max-width: 500px;
+    margin: auto;
+    padding: 20px 10px 10px 10px;
+    text-shadow: 1px 1px 0px  black;
+
+}
+
+nav{
+    background-color: #9E8A5D;
+    padding: 10px;
+}
+nav > a{
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px;
+    transition-duration:1s ;
+}
+nav >a:hover{
+    background-color: var(--core4);
+    border-radius: 0.6em;
+}
+
+main{
+    background-color: white;
+    margin: auto;
+    margin-bottom:1em ;
+    border-radius: 0px 0px 10px 10px;
+    min-width: 300px;
+    max-width: 1000px;
+    padding:1.25em ;
+    box-shadow: 0px 0px 0.8em black;
+}
+main img{
+    width: 100%;
+}
+main img.pequena{
+    width:50%;
+    display: block;
+    margin:auto;
+}
+
+main  h1{
+    color: var(--core4);
+    font-family: var(--fonte-android);
+}
+
+main h2{
+    color: var(--core4);
+    font-family: var(--fonte-android);
+}
+
+footer{
+    background-color: var(--core4);
+    color: white;
 }
