--- a/style/style.css
+++ b/style/style.css
@@ -130,8 +130,62 @@ main h2{
     background-image: linear-gradient(to right,var(--core1),transparent);
     padding-left: 1em;
 }
+div.video{
+    margin: 0px -20px 30px -20px;
+    padding: 20px; 
+    padding-bottom:56.3%;
+    position: relative;
+}
+div.video>iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+aside{
+    background-color: var(--core2);
+    border-radius: 10px;
+    padding:10px;
+    box-shadow: 0px 0px 0.8em black;
+    
+}
+aside > h3{
+    background-color: var(--core4);
+    border-radius: 0.5em;
+    padding: 0.8em;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+
+aside > ul{
+    list-style-type: '\2714';
+    list-style-position: inside;
+    columns: 2;
+    
+}
+aside > ul > li > abbr{
+    text-decoration: none;
+}
 
 footer{
     background-color: var(--core4);
     color: var(--core0);
+    text-align: center;
+    width: 100%;
+    
+}
+footer a{
+    
+    color: var(--core1);
+    padding: 2px 6px;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 0.5em;
+    
+    
+}
+footer a:hover{
+    text-decoration: underline;
 }
