--- a/style/style.css
+++ b/style/style.css
@@ -179,7 +179,7 @@ footer{
 footer a{
     
     color: var(--core1);
-    padding: 2px 6px;
+    padding: 0px 6px;
     font-weight: bold;
     text-decoration: none;
     border-radius: 0.5em;
@@ -188,4 +188,11 @@ footer a{
 }
 footer a:hover{
     text-decoration: underline;
+}
+
+@media screen and (min-width:100px),(max-width: 375px){
+nav > a{
+    padding: 3px;
+}
+
 }
